# crc8-rs

./: Cargo.toml  README.md  README.tpl
examples/: check_msg_corruption.rs
src/: lib.rs  polynomial.rs
