[package]
name = "crc8-rs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A heapless no-std library for doing 8-bit cyclic redundancy checks"
version = "1.1.0"

edition = "2018"

categories = ["embedded", "no-std"]
keywords = ["crc", "checksum", "embedded"]

repository = "https://github.com/coastalwhite/crc8"
homepage = "https://github.com/coastalwhite/crc8"

readme = "README.md"
license = "MIT"
